--- a/packages/editor-ui/index.html
+++ b/packages/editor-ui/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
-		<link rel="icon" href="./public/favicon-qbem.jpg" />
+		<link rel="icon" href="./public/favicon.png" />
 		<script type="text/javascript">
 			window.BASE_PATH = '/{{BASE_PATH}}/';
 			window.REST_ENDPOINT = '{{REST_ENDPOINT}}';
